# ringdown

./: .env.example  .gcloudignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  approve_new_phone.py  authorize_new_phone.py  cloudrun-deactivate.py  cloudrun-deploy.py  config.example.yaml  docker-compose.yaml  gcp-artifacts-cleanup-policy.json  generate_audio_file.py  live_test_call.py  log_love.py  pipecat_agent_deploy.py  pyproject.toml  ringdown_device.preferences_pb  secret-manager.yaml  todo-android-local-codex.txt  todo-android.txt  todo-ios.txt  todo.txt
android/: README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
android/app/: .editorconfig  .gitignore  build.gradle.kts  gradle.properties  manual_ui.xml  proguard-rules.pro  registration_failure_ui.xml  settings.gradle.kts  voice_failure_ui.xml
android/buildSrc/: build.gradle.kts
android/config/: .env.example
android/scripts/: approve_device.py  emulator-smoke.sh  gradle.sh  init-project.sh  install.py  install.sh  manual_voice_harness.py  mock-server.sh  mock_server.py  prepare_local_models.py  run-production-instrumentation.sh  run-voice-smoke.sh  run_local_voice_smoke.py  run_local_voice_smoke_pixel9.sh  setup-sdk.sh
app/: __init__.py  audio.py  call_state.py  chat.py  config_schema.py  lifespan.py  logging_utils.py  main.py  memory.py  metrics.py  model_capabilities.py  pricing.py  settings.py  tool_framework.py  tool_runner.py  validators.py
app/api/: __init__.py  mobile.py  mobile_text.py  twilio.py  websocket.py
app/managed_av/: __init__.py  client.py  session_store.py
app/mobile/: config_store.py  realtime.py  smoke.py  text_session_store.py
app/speech/: __init__.py
app/tools/: change_llm.py  email.py  google_calendar.py  google_docs.py  hang_up.py  reset.py  tavily.py  todo.py
docs/: configuration_guide.md  email_tool_setup.md  tool_cross_provider_compatibility.md  voice-smoke-ci.md  websocket_reconnection.md
docs/plans/: 2026-03-26-main-android-split.md  2026-03-27-main-android-split-test-plan.md
pipelines/daily/: ringdown-managed-av.yaml
pipelines/pipecat-agent/: Dockerfile  README.md  bot_phone_twilio.py  bot_web.py  config_loader.py  deploy-config.yaml  requirements.txt
scripts/: reformat_litellm_log.py
tests/: __init__.py  conftest.py  live_test_all_functions.py  live_test_call.py  test_android_install_script.py  test_app.py  test_approve_new_phone.py  test_async_tool_execution.py  test_authorize_new_phone.py  test_auto_approve.py  test_change_llm_tool.py  test_config_schema.py  test_control_audio_utils.py  test_email_greenlist.py  test_email_tool.py  test_error_cases.py  test_google_calendar_tool.py  test_google_docs_tool.py  test_hangup_tool.py  test_live_call_wrapper.py  test_managed_session_helper.py  test_manual_voice_harness.py  test_mobile_control_channel.py  test_mobile_realtime.py  test_mobile_registration.py  test_mobile_smoke.py  test_mobile_text_handshake.py  test_mobile_text_session.py  test_mobile_voice_session.py  test_model_capabilities.py  test_no_ssml_tag_stripping.py  test_prepare_local_models.py  test_reformat_litellm_log.py  test_reset_tool.py  test_run_local_voice_smoke.py  test_run_voice_smoke_script.py  test_speech_providers.py  test_ssml_chunk_structure.py  test_ssml_streaming.py  test_tavily_tools.py  (+7 more)
tests/fixtures/: config.test.yaml
tests/live/: control_audio_utils.py  handset_audio_loop.py  managed_session_helper.py  mobile_app_voice_driver.py  (+2 more)
todo-android-spec/: mockup-1-pending-approval.html  mockup-2-idle-main.html  mockup-3-voice-active.html  mockup-4-voice-reconnecting.html  mockup-5-chat-session.html  mockup-6-chat-tool-expanded.html  mockup-7-permission-denied.html  mockup-8-background-notification.html  todo-android-spec.txt
utils/: __init__.py  mp3_uploader.py  websocket_smoke.py
(+153 files in other folders)
